--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,88 @@
+---
+import "../styles/global.css";
+import Topbar from "@components/layout/Topbar.astro";
+import Contact from "@components/layout/Contact.astro";
+import Squares from "@components/snippets/Squares.tsx";
+import { ClientRouter } from "astro:transitions";
+
+const currentLocation = Astro.url.pathname;
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Carlos Velázquez</title>
+    <ClientRouter />
+  </head>
+  <body class="antialiased">
+    <main>
+      <div class="blur-upper"></div>
+      <Topbar />
+      {currentLocation === "/" && <Contact />}
+      <div
+        class="fixed top-0 left-0 w-screen h-screen -z-10"
+        aria-hidden="true"
+      >
+        <Squares
+          client:load
+          speed={0.2}
+          squareSize={30}
+          direction="down"
+          borderColor="#242424"
+          hoverFillColor="#222"
+        />
+      </div>
+      <div
+        class="flex gap-[10rem] min-h-screen flex-col items-center justify-between px-[1.5rem] sm:px-[5rem] md:px-[10rem] lg:px-[20rem]"
+      >
+        <slot />
+      </div>
+      <div class="blur-lower"></div>
+    </main>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  .blur-upper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10rem;
+    background-color: rgba(
+      0,
+      0,
+      0,
+      0.5
+    ); /* Puedes mantener un color base o transparente */
+    backdrop-filter: blur(8px);
+    z-index: 10;
+    /* Mask para el degradado */
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      black,
+      transparent
+    ); /* Para compatibilidad con WebKit */
+    mask-image: linear-gradient(to bottom, black, transparent);
+    pointer-events: none;
+  }
+
+  .blur-lower {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(12px);
+    z-index: 10;
+    /* Mask para el degradado */
+    -webkit-mask-image: linear-gradient(to top, black, transparent);
+    mask-image: linear-gradient(to top, black, transparent);
+    pointer-events: none;
+  }
 </style>
