fix: clientload in astro component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ import projectsJson from "@data/projects.json";
               <h2 class="text-base">Skills</h2>
             </div>
           </Reveal>
-          <SkillsStack client:load />
+          <SkillsStack />
         </div>
       </div>
     </section>
