feat: first menu for mobile

--- a/src/components/common/IconBadge.astro
+++ b/src/components/common/IconBadge.astro
@@ -10,7 +10,7 @@ const { icon } = Astro.props;
 ---
 
 <GlassContainer>
-  <div class="flex items-center gap-2 w-[20px] h-[20px] justify-center">
+  <div class="flex items-center gap-2 w-[25px] h-[25px] md:w-[20px] md:h-[20px] justify-center">
     <Icon icon={icon} />
   </div>
 </GlassContainer>
