--- a/src/components/common/IconButton.astro
+++ b/src/components/common/IconButton.astro
@@ -11,7 +11,7 @@ const { icon }: Props = Astro.props;
 
 <div
   class={cn([
-    "glass rounded-full p-[0.5rem]",
+    "glass rounded-full p-[0.75rem] sm:p-[0.5rem]",
   ])}
 >
   <div class="flex items-center gap-2 w-[20px] h-[20px] justify-center">
