--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,8 @@ const currentLocation = Astro.url.pathname;
   </body>
 </html>
 
+<script type="module" src="/src/scripts/menu.js"></script>
+
 <style>
   .blur-upper {
     position: fixed;
