--- a/src/components/layout/Contact.astro
+++ b/src/components/layout/Contact.astro
@@ -8,7 +8,7 @@ import { Reveal } from "@components/common/Reveal";
 import BlurText from "@components/snippets/BlurText";
 ---
 
-<footer class="fixed bottom-4 left-4 z-50">
+<footer class="fixed bottom-4 left-4 z-50 hidden md:block">
   <div class="flex flex-col gap-4">
     {
       contactJson.map((key) => (
