--- a/src/components/layout/Topbar.astro
+++ b/src/components/layout/Topbar.astro
@@ -1,11 +1,19 @@
 ---
 import GlassContainer from "@components/common/GlassContainer.astro";
 import Button from "@components/common/Button.astro";
+import IconButton from "@components/common/IconButton.astro";
+import contactJson from "@data/contact.json";
+import socialJson from "@data/social.json";
+import { type IconName } from "@components/common/Icon";
+import IconBadge from "@components/common/IconBadge.astro";
+import BlurText from "@components/snippets/BlurText";
+import { Reveal } from "@components/common/Reveal";
 
 const currentLocation = Astro.url.pathname;
 ---
 
 <div>
+  <!-- Botón Back -->
   <div class="fixed top-4 left-4 z-50">
     {
       currentLocation !== "/" && (
@@ -17,7 +25,9 @@ const currentLocation = Astro.url.pathname;
       )
     }
   </div>
-  <nav class="fixed top-4 left-1/2 -translate-x-1/2 z-50">
+
+  <!-- NAV Desktop -->
+  <nav class="fixed top-4 left-1/2 -translate-x-1/2 z-50 hidden md:block">
     <GlassContainer>
       <div class="flex items-center justify-between gap-0">
         {
@@ -36,7 +46,106 @@ const currentLocation = Astro.url.pathname;
       </div>
     </GlassContainer>
   </nav>
-  <div class="fixed top-4 right-4 z-50">
-    <Button rightIcon="DownloadSimple"> <p class="text-sm">Resume</p> </Button>
+
+  <!-- Botón Resume -->
+  <div class="fixed top-4 right-4 z-50 hidden md:block">
+    <Button rightIcon="DownloadSimple">
+      <p class="text-sm">Resume</p>
+    </Button>
+  </div>
+
+  <!-- Botón Menú móvil -->
+  <div class="fixed top-4 right-4 z-50 md:hidden">
+    <button id="mobile-menu-btn" aria-label="Open menu">
+      <IconButton icon="DotsThreeOutlineVertical" />
+    </button>
+  </div>
+
+  <!-- Menú móvil desplegable -->
+  <div
+    id="mobile-menu"
+    class="fixed top-0 left-0 w-full h-full bg-black/60 backdrop-blur-sm z-40 transform -translate-y-full transition-transform duration-300 ease-in-out md:hidden"
+  >
+    <div class="flex flex-col h-full gap-2">
+      <div
+        class="flex flex-col items-center justify-center h-full space-y-6 text-white"
+      >
+        {
+          [
+            { href: "/#about", label: "About" },
+            { href: "/#skills", label: "Skills" },
+            { href: "/#projects", label: "Projects" },
+          ].map(({ href, label }) => (
+            <a href={href} class="text-lg" onclick="closeMobileMenu()">
+              {label}
+            </a>
+          ))
+        }
+      </div>
+      <div class="flex flex-col gap-4 p-8">
+        <BlurText
+          client:load
+          text="Contact"
+          delay={25}
+          animateBy="words"
+          direction="top"
+          onAnimationComplete={() => console.log("foo")}
+          className="text-base font-semibold"
+        />
+        <div class="flex flex-col gap-2">
+          {
+            contactJson.map((key) => (
+              <div class="flex items-center gap-2">
+                <Reveal index={0} client:load>
+                  <IconBadge icon={key.icon as IconName} />
+                </Reveal>
+                <div class="flex flex-col gap-0">
+                  <>
+                    <BlurText
+                      client:load
+                      text={key.label}
+                      delay={25}
+                      animateBy="words"
+                      direction="top"
+                      onAnimationComplete={() => console.log("foo")}
+                      className="text-sm"
+                    />
+                    <BlurText
+                      client:load
+                      text={key.text}
+                      delay={25}
+                      animateBy="words"
+                      direction="top"
+                      onAnimationComplete={() => console.log("foo")}
+                      className="text-sm text-gray-400"
+                    />
+                  </>
+                </div>
+              </div>
+            ))
+          }
+        </div>
+        <BlurText
+          client:load
+          text="Connect with me"
+          delay={25}
+          animateBy="words"
+          direction="top"
+          onAnimationComplete={() => console.log("foo")}
+          className="text-base font-semibold"
+        />
+        <div class="flex flex-row gap-2">
+          {
+            socialJson.map((key, index) => (
+              <Reveal index={index} client:load>
+                <a href={key.url} target="_blank" rel="noopener noreferrer">
+                  <IconButton icon={key.icon as IconName} />
+                </a>
+              </Reveal>
+            ))
+          }
+        </div>
+      </div>
+    </div>
   </div>
 </div>
