--- a/src/pages/project/[projectId].astro
+++ b/src/pages/project/[projectId].astro
@@ -30,7 +30,7 @@ const {
 <Layout>
   <div class="flex flex-col gap-8 my-24 min-h-screen text-white">
     <img src={image} alt={title} class="w-full rounded-lg" />
-    <div class="flex flex-col sm:flex-row justify-between w-full max-w-4xl">
+    <div class="flex flex-col sm:flex-row gap-4 justify-between w-full max-w-4xl">
       <BlurText
         client:load
         text={title}
